@@ -18,6 +18,8 @@ public:
   static void FillInVisualisations(CSetting *pSetting, int iControlID);
 protected:
   virtual void OnInitWindow();
+  virtual void RestoreControlStates();
+
   void CheckNetworkSettings();
   void FillInSubtitleHeights(CSetting *pSetting);
   void FillInSubtitleFonts(CSetting *pSetting);
